--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body{
 
 }
 h1{
-    font-size: 50px;
-    
+
+    font-size:50px;
+
 }
 .first-part{
     background-image:url(top-banner.png);
-    
     background-repeat: no-repeat;
     
 }
@@ -39,3 +39,47 @@ h1{
     padding: 10px 30px;
     color:white;
 }
+.second-part{
+    background-image: url(dream-bg.png);
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+
+.last-part h3{
+    color: orange;
+
+}
+.last-part{
+    box-shadow: 5px 7px 40px grey;
+    margin-top:5px;
+    margin-left:30px;
+    margin-right:30px;
+    height:50%;
+    padding:50px;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,lightsalmon,tomato);
+    border-image-slice: 1;
+    
+    
+}
+#baby-develop{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+footer{
+  text-align: center;
+  color:grey;
+}
+.experience-part{
+    background-repeat: no-repeat;
+    background-image: url(exp-bg.png);
+    background-position:left;
+    
+}
+
+
